# cryptanalysis

./: .gitignore  .gitmodules  CT-AUDIT.md  Cargo.toml  FROZEN-PARAMS.md  LICENSE  PROOF-TOOLCHAIN.md  README.md  REPORT.md  TODO.md  WASM.md  farfalle-tree-design.md
attack/: Cargo.toml
attack/src/: auxcrypt_linear.rs  diff_analysis.rs  recover_auxcrypt_key.rs  recover_ysc2_key.rs  recover_ysc2_state.rs  ysc2_ref.rs
bench/: Cargo.toml
bench/src/: compare.rs
farfalle-gen/: META.md  NOTE-aead-nonce-split.md  NOTE-fhe-cost.md  NOTE-multikey-security.md  NOTE-orthomorphism-roll-coincidence.md  RESOLVED-q3-q8.md
isabelle-verify/: GF64.thy  LOG.md  Q1_Primitivity.thy  Q2_Cycles.thy  Q3_RollMatrix.thy  README.md  ROOT
milp/: README.md  add_bct_theory.py  adv_bestdp.py  adv_bestdp2.py  adv_deep2.py  adv_deep3.py  adv_deep_prob1.py  adv_farf2.py  adv_farfalle.py  adv_farfalle_bridge.py  adv_gf2.py  adv_invert.py  adv_invert2.py  adv_invert32.py  adv_invert32b.py  adv_invsubspace.py  adv_lens_check.py  adv_lm_invert.py  adv_msb_la.py  adv_prim32.py  adv_prob1.py  adv_prob1_cross.py  adv_prob1_dig.py  adv_prob1_empirical.py  adv_prob1_final.py  adv_prob1_la_indep.py  adv_prob1_v2.py  adv_prob1_v3.py  adv_real32.py  adv_review_bridge3.py  adv_review_farfalle2.py  adv_review_final.py  adv_review_invariant4.py  adv_review_invariant5.py  adv_review_invariant6.py  adv_review_lm.py  adv_rx_yttrium.py  adv_yttrium_check.py  alg_fixedspace_break.py  alg_guess_cost.py  (+109 more)
presets/: README.md  aarch64-baseline.toml  aarch64-sve.toml  aarch64-v8.2.toml  baseline.toml  ppc64-power8.toml  ppc64-power9.toml  rv64gcv.toml  wasm-simd.toml  x86-64-v2.toml  x86-64-v3.toml  x86-64-v4.toml
xtask/: Cargo.toml
xtask/src/: main.rs
yhash/: Cargo.toml  README.md  SPEC-draft.md
yhash-bench/: Cargo.toml  RESULTS.md  SECURE_HASH_COMPARISON.md  SIMD_MT_RESULTS.md
yhash-bench/src/: bench.rs  ct_dudect.rs  secure_bench.rs  simd_mt.rs
yhash-verify/: R1-STATUS.md  ROOT  Y1_TreeEncoding.thy  Y2_XORDecomposition.thy  Y3_DomainSeparation.thy  Y4_MaskUniqueness.thy  Y5_CRReduction.thy
yhash-verify/easycrypt/: r1_bound.ec
yhash/.cargo/: config.toml
yhash/examples/: gen_kat.rs
yhash/src/: consts.rs  digest_api.rs  encode.rs  hasher.rs  leaf.rs  lib.rs  parallel.rs  perm.rs  perm_simd.rs  spawner.rs  tree.rs
yhash/tests/: hashmap_integration.rs  kat.rs  single_leaf.rs  tree_mode.rs
ypsilenti/: Cargo.toml  README.md  SPEC-draft.md  build.rs
ypsilenti-verify/: GF32.thy  Q1p_Primitivity.thy  Q2p_Cycles.thy  ROOT  Y1p_TreeEncoding.thy  Y2p_XORDecomposition.thy  Y3p_DomainSeparation.thy  Y4p_MaskUniqueness.thy
ypsilenti/examples/: gen_kat.rs
ypsilenti/src/: consts.rs  digest_api.rs  encode.rs  gf32.rs  hasher.rs  leaf.rs  lib.rs  parallel.rs  perm.rs  perm_simd.rs  spawner.rs  tree.rs
ypsilenti/tests/: basic.rs  kat.rs
ysc3/: Cargo.toml  README.md  SPEC.md  SPEC.typ
ysc3/src/: aead.rs  consts.rs  lib.rs  permutation.rs  stream.rs  xof.rs
ysc3/tests/: v1_attacks_fail.rs
ysc4/: Cargo.toml  README.md  SPEC.md  SPEC.typ  build.rs  template.typ
ysc4/.cargo/: config.toml
ysc4/src/: aead.rs  consts.rs  gf2_64.rs  lib.rs  permutation.rs  permutation_simd.rs  stream.rs  xof.rs
ysc4/tests/: sigma_glm_invariants.rs  v1_attacks_fail.rs
ysc5/: Cargo.toml  README.md  SIMD.md  SPEC.typ
ysc5/.cargo/: config.toml
ysc5/src/: aead.rs  consts.rs  farfalle.rs  lib.rs  mac.rs  roll.rs  simd.rs  stream.rs  xof.rs
ysc5/tests/: incremental.rs  roundtrip.rs  rustcrypto_traits.rs  v1_attacks_fail.rs
ysc6/: SPEC-draft.md
ysip/: Cargo.toml  SPEC-draft.md  ref_check.py
ysip/examples/: bench.rs  gen_kat.rs
ysip/src/: lib.rs
ysip/tests/: kat.rs
yttrium/: BENCH.md  Cargo.toml  SPEC-draft.md
yttrium/examples/: bench.rs  cpa.rs  dudect.rs  dump_permute.rs  large_kat.rs
yttrium/src/: large.rs  lib.rs  parallel.rs  perm_simd.rs  spawner.rs
yttrium/tests/: kat.rs
