[workspace]

[package]
name = "yhash"
version = "0.1.0"
edition = "2024"
authors = ["YHash reference impl"]
license = "BSD-2-Clause"
description = "YHash — Farfalle-tree hash function for HashMap/KV stores"

[features]
default = []
std = ["alloc", "zeroize/std", "ysc4/std"]
# alloc은 *옵셔널* — 대부분 사용 경로는 stack-only.
# 필요 시: variable-length output, vec 반환 API, parallel 해시.
alloc = []
# RustCrypto digest traits (Update, FixedOutput, ExtendableOutput, Mac).
yhash-digest = ["dep:digest", "alloc"]

# Threading (둘 다 std 필요)
std-thread = ["std"]
rayon = ["dep:rayon", "std"]

# SIMD presets — ysc4 순열의 SIMD 경로로 forward (mutually exclusive).
# stable: wide (u64x4, 4-lane), nightly: core::simd (u64x8).
stable-portable-simd = ["ysc4/stable-portable-simd", "dep:wide"]
nightly-portable-simd = ["ysc4/nightly-portable-simd"]

[dependencies]
ysc4 = { path = "../ysc4" }
zeroize = { version = "1.8", default-features = false, features = ["derive"] }
digest = { version = "0.10.7", default-features = false, optional = true, features = ["mac"] }
rayon = { version = "1.10", optional = true }
wide = { version = "1.5", optional = true, default-features = false }

[dev-dependencies]
hex = "0.4"

[[test]]
name = "single_leaf"
path = "tests/single_leaf.rs"

[[test]]
name = "tree_mode"
path = "tests/tree_mode.rs"

[[test]]
name = "hashmap_integration"
path = "tests/hashmap_integration.rs"
