[workspace]

[package]
name = "ypsilenti"
version = "0.1.0"
edition = "2024"
authors = ["ypsilenti reference impl"]
license = "BSD-2-Clause"
description = "ypsilenti — Downsized YHash variant (8×u32 σ-GLM, ~64-bit DoS resistance)"
build = "build.rs"

[features]
default = []
std = ["alloc", "zeroize/std"]
alloc = []
ypsi-digest = ["dep:digest", "alloc"]

# Threading (둘 다 std 필요)
std-thread = ["std"]
rayon = ["dep:rayon", "std"]

# SIMD presets (mutually exclusive)
stable-portable-simd = []
nightly-portable-simd = []

[dependencies]
zeroize = { version = "1.8", default-features = false, features = ["derive"] }
digest = { version = "0.10.7", default-features = false, optional = true, features = ["mac"] }
rayon = { version = "1.10", optional = true }

[dev-dependencies]
hex = "0.4"

[[test]]
name = "basic"
path = "tests/basic.rs"
