[package]
name = "ysc4"
version = "0.1.0"
edition = "2021"
authors = ["YSC4 reference impl"]
license = "BSD-2-Clause"
description = "YSC4 — FHE-optimized stream/AEAD/XOF based on σ-Generalized Lai-Massey"

[features]
default = []
std = ["alloc", "zeroize/std"]
alloc = []
ysc4x = []
simd = []

[dependencies]
zeroize = { version = "1.8", default-features = false, features = ["derive"] }

[dev-dependencies]
hex = "0.4"

[[test]]
name = "v1_attacks_fail"
path = "tests/v1_attacks_fail.rs"

[[test]]
name = "sigma_glm_invariants"
path = "tests/sigma_glm_invariants.rs"
