[workspace]

[package]
name = "ysc4"
version = "0.1.0"
edition = "2024"
authors = ["YSC4 reference impl"]
license = "BSD-2-Clause"
description = "YSC4 — FHE-optimized stream/AEAD/XOF based on σ-Generalized Lai-Massey"
build = "build.rs"

[features]
default = []
std = ["alloc", "zeroize/std"]
alloc = []
ysc4x = []

# SIMD presets (mutually exclusive — build.rs가 검증)
# stable: wide crate, nightly: core::simd (portable_simd)
stable-portable-simd = ["dep:wide"]
nightly-portable-simd = []
# 기존 `simd` feature는 nightly-portable-simd의 alias (ysc5 호환).
simd = ["nightly-portable-simd"]

[dependencies]
zeroize = { version = "1.8", default-features = false, features = ["derive"] }
wide = { version = "1.5", optional = true, default-features = false }

[dev-dependencies]
hex = "0.4"

[[test]]
name = "v1_attacks_fail"
path = "tests/v1_attacks_fail.rs"

[[test]]
name = "sigma_glm_invariants"
path = "tests/sigma_glm_invariants.rs"
