[package]
name = "ysc5"
version = "0.1.0"
edition = "2021"
authors = ["YSC5 reference impl"]
license = "BSD-2-Clause"
description = "YSC5 — Farfalle PRF/Stream/AEAD/XOF on YSC4 σ-GLM permutation"

[features]
default = []
std = ["alloc", "zeroize/std", "ysc4/std"]
alloc = []
ysc5x = ["alloc"]   # AEAD + XOF + MAC 모드는 Vec 출력을 위해 alloc 필요
simd = ["ysc4/simd"]

[dependencies]
ysc4 = { path = "../ysc4" }
zeroize = { version = "1.8", default-features = false, features = ["derive"] }

[dev-dependencies]
hex = "0.4"

[[test]]
name = "roundtrip"
path = "tests/roundtrip.rs"

[[test]]
name = "v1_attacks_fail"
path = "tests/v1_attacks_fail.rs"

[[test]]
name = "incremental"
path = "tests/incremental.rs"
